--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BETonCRICKET</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <style>
@@ -13,6 +13,21 @@
             font-weight: bolder;
             color:#f97e03 ;
         }
+        .nav-dropdown{
+            display: flex; 
+            align-items: center; 
+            gap: 1px;
+            justify-content: center;
+            align-items: center;
+        }
+        .nav-item{
+            display: flex; 
+            align-items: center; 
+            gap: 20px;
+            justify-content: center;
+            align-items: center;
+        }
+
         .hero-section {
             background: linear-gradient(135deg, #ffcc99 30%, #fff 100%);
             padding: 0px 0;
@@ -109,7 +124,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <span class="logo-text">BET</span>
-                 <span>on</span> 
+                 <span class="bolder">on</span> 
                  <span class="logo-text">CRICKET</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -117,11 +132,39 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Betting Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Reviews</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="#">Sign In</a></li>
+                    <li class="nav-item">
+                        <span class="nav-dropdown">
+                            <a class="nav-link" href="#">Home</a>
+                            <img src="images/Vector.png" alt="">
+                        </span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-dropdown">
+                            <a class="nav-link" href="#">Betting Sites</a>
+                            <img src="images/Vector.png" alt="">
+                        </span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-dropdown">
+                            <a class="nav-link" href="#">Promos & Offers</a>
+                            <img src="images/Vector.png" alt="">
+                        </span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-dropdown">
+                            <a class="nav-link" href="#">FAQ</a>
+                            <img src="images/Vector.png" alt="">
+                        </span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-dropdown">
+                            <a class="nav-link" href="#">News</a>
+                            <img src="images/Vector.png" alt="">
+                        </span>
+                    </li>
+                    
+                    <li class="nav-item nav-btn"><a class="nav-link" href="#">Sign In</a></li>
+                    <li class="nav-item nav-btn"><a class="nav-link" href="#">Log In</a></li>
                 </ul>
             </div>
         </div>
@@ -137,8 +180,8 @@
                        <div class="heading-box">Cricket Betting Partner!"</div>
                     </h1>
                     <p>
-                        <span class="heading-box"><i class="fa-solid fa-globe"></i>Explore top platforms</span> 
-                        <span class="heading-box"><i class="fa-solid fa-gift"></i>compare bonuses</span>
+                        <span class="heading-box"><i class="fa-solid fa-globe hero-icon"></i>Explore top platforms</span> 
+                        <span class="heading-box"><i class="fa-solid fa-gift hero-icon"></i>compare bonuses</span>
                         <div class="brush-container">
                             <img src="./images/brush-stroke.png" alt="Brush Stroke" class="brush-img">
                             <svg width="150" height="50" class="brush-svg">
